Fixed overflow bug in project name
Fixed overflow bug in project name

--- a/stylesheets/breakfast.css
+++ b/stylesheets/breakfast.css
@@ -190,6 +190,8 @@ nav {
 		font-size: 1.9em;
 		font-weight: bold;
 		padding-bottom: 5px;
+		overflow: hidden;
+		word-wrap:break-word;
 	}
 	#standardTitle ul li#subtitle{
 		font-size: 0.9em;
